--- a/bariloche/static/styles.css
+++ b/bariloche/static/styles.css
@@ -44,7 +44,7 @@ html, body {
   background: #fff;
   color: #000;
 }
-.no-margin { margin-bottom: 0; margin-top: 0;}
+.card.no-margin { margin-bottom: 0; margin-top: 0;}
 .card .block {
   padding: 16px 20px;
   position: relative;
